<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigation_drawer_container"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="com.webcon.sus.activities.NavigationDrawerFragment">

    <LinearLayout
        android:id="@+id/navigation_drawer_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="88dp"
        android:orientation="vertical"
        android:background="@drawable/side_nav_bar">
        <com.webcon.sus.view.CircleImageView
            android:id="@+id/c_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:src="@drawable/icon_user_2"
            android:layout_marginLeft="16dp"
            app:border_width="2dp"
            app:border_color="@color/White" />
        <LinearLayout
            android:id="@+id/linear_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_userid"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:textSize="12sp"
                android:textColor="@color/Amber200"/>

            <TextView
                android:id="@+id/tv_drawer_userid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_null"
                android:textSize="16sp"
                android:textColor="@color/White"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/str_username"
                android:textSize="12sp"
                android:textColor="@color/Amber200"/>

            <TextView
                android:id="@+id/tv_drawer_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_null"
                android:textSize="16sp"
                android:textColor="@color/White"/>
        </LinearLayout>
    </LinearLayout>

    <!--<ListView-->
        <!--android:id="@+id/navigation_drawer_list"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="12dp"-->
        <!--android:choiceMode="singleChoice"-->
        <!--android:divider="@android:color/transparent"-->
        <!--android:descendantFocusability="blocksDescendants"-->
        <!--android:dividerHeight="0dp"-->
        <!--android:fadingEdge="none"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:choiceMode="singleChoice"
            android:id="@+id/navigation_drawer_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></android.support.v7.widget.RecyclerView>

    </LinearLayout>



</LinearLayout>
